--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 /* Pomodoro Clock Styles */
 
 body {
-    background-color: ##fdf3e7;    
+    background-color: ##fdf3e7;
 }
 
 h1 {
@@ -9,24 +9,26 @@ h1 {
 }
 
 #clock {
-    
-    padding: 5px;  
+    padding: 5px;
     font-size: 100px;
     text-align: center;
-   /* border: 2px solid black; */
-    
+    /* border: 2px solid black; */
 }
 
-#start {
-    border: 2px solid aquamarine;
+.settings {
+    float: left;
+}
+
+#start {    
+    border: 2px solid black;
     text-align: center;
     font-size: 30px;
     padding: 10px;
+    cursor: pointer;
 }
-
 
 .center {
     margin: auto;
-    width: 50%;    
+    width: 50%;
     padding: 10px;
 }
